--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h3>Demo Hide Paragraphs</h3>
+<h5>Click on the paragraphy to delete the text.</h5>
 <p>One</p>
 <p>Two</p>
 <p>Three</p>
