Align to center and change background colour

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <title>Demo Hide Paragraphs</title>
+<style> h3, h5, p {text-align: center; }</style>
 </head>
-<body>
+<body bgcolor="#ddd">
 <h3>Demo Hide Paragraphs</h3>
 <h5>Click on the paragraphy to delete the text.</h5>
 <p>One</p>
